--- a/coffeemud.ini
+++ b/coffeemud.ini
@@ -2033,7 +2033,7 @@ ACCMSGS=OFF
 #
 # The default value is COMMAND_POSE, which disables the pose command, 
 #    along with QUITREASON and RETIREREASON, which are useless.
-DISABLE=DBERRORQUESTART, QUITREASON, SLOW_AGEING, DEATHCRY, AUTOMOODS, AUTOFORWARD, FATIGUE, ALLERGIES, NEWPLAYERS, 
+DISABLE=DBERRORQUESTART, QUITREASON, SLOW_AGEING, DEATHCRY, AUTOMOODS, AUTOFORWARD, FATIGUE, ALLERGIES, NEWPLAYERS
 
 # The ENABLE flag is for enabling features of the engine which are 
 # normally disabled, such as most races, character classes in beta,
