--- a/coffeemud.ini
+++ b/coffeemud.ini
@@ -1283,7 +1283,7 @@ BADNAMES=Ability,Abjurer,Acid,Age,Alignment,Alterer,Amaris,Apprentice,Arcanist,A
 # characters.  
 # Value is 0 or 1 to disable, or the maximum number of characters 
 # each account can create.  Default is 1
-COMMONACCOUNTSYSTEM=20
+COMMONACCOUNTSYSTEM=50
 
 # MAXCONNSPERACCOUNT is used with COMMONACCOUNTSYSTEM and the
 # MAXCONNSPERIP systems above to set a maximum number of character
@@ -2055,7 +2055,7 @@ DISABLE=DBERRORQUESTART, QUITREASON, SLOW_AGEING, DEATHCRY, AUTOMOODS, AUTOFORWA
 ENABLE=RACE_OGRE, RACE_LIZARDMAN, RACE_MERFOLK, RACE_PIXIE, RACE_ORC, RACE_GOBLIN,\
 	   RACE_CENTAUR, RACE_KOBOLD, RACE_RESURGENTIS, RACE_DRYAD, RACE_DEMON,RACE_DWARF,\
 	   RACE_NYMPH, RACE_KITSUNE, RACE_DROW, RACE_FAERIE, RACE_BEASTKIN,  RACE_NEKOMIMI,\
-	   RACE_ANGEL, RACE_TIEFLING, RACE_SLIMEPERSON, RACE_GNOLL, RACE_LAMIA, RACE_DRACONIAN
+	   RACE_ANGEL, RACE_TIEFLING, RACE_SLIMEPERSON, RACE_GNOLL, RACE_LAMIA, RACE_DRACONIAN, RACE_MYCONID
 
 # The DEBUG flag should be used only by developers who want lots of
 # extra logging in order to fix bugs.  These values are also comma delimited.
