--- a/coffeemud.ini
+++ b/coffeemud.ini
@@ -416,7 +416,7 @@ EXPRATE=6
 # them (default), SELFONLY will only allow the players to loot
 # their own corpses, and the PKONLY flag will allow the players, or 
 # other players with the playerkill flag turned on to loot.
-CORPSEGUARD=ALL
+CORPSEGUARD=PKONLY
 
 # The ITEMLOOTPOLICY is left blank to not implement any item-loss
 # when mobs are killed.  Otherwise you can implement one or more
@@ -729,7 +729,8 @@ REMORTRETAIN=100% FACTIONS, 100% QUESTPOINT, 50% EXPERTISES, 100% WARRANTS
 # Example: Orc+Human=Gnome,MOTHER Elf+Human=HalfElf|Elf
 # Default is blank.
 RACEMIXING=Elf+Human=HalfElf,Ogre+Giant|Human=HalfOgre,Elf+Drow=Drow,\
-		   Human+Resurgentis=Resurgentis,Elf+Resurgentis=Resurgentis,Tiefling+Human=Tiefling,Demon+Tiefling=Demon
+		   Human+Resurgentis=Resurgentis,Elf+Resurgentis=Resurgentis,\
+		   Tiefling+Human=Tiefling,Demon+Tiefling=Demon
 
 # HUNGER allows one to tweak the game hunger system.  This
 # is a comma-delimited list of 3 numbers.  The first number is
@@ -797,7 +798,7 @@ EXPDEFER=
 #          SOCIAL-NPC 1, SOCIAL-OTH 1, EMOTE-PC 5, EMOTE-NPC 1, EMOTE-OTH 1, GOAFK -25, \
 #          CHANNEL-NAMED(GOSSIP,CHAT) -10
 # Default is empty (role playing xp is disabled)
-RPAWARDS=9999999 2, INTRODUCE-PC 20, SAY-PC 40, SOCIAL-PC 30, EMOTE-PC 100
+RPAWARDS=9999999 2, INTRODUCE-PC 250, SAY-PC 100, SOCIAL-PC 50, EMOTE-PC 250
 
 # LOGOUTMASK is an optional zappermask that the player must match in order 
 # to logout of the game, quit, or switch to another account character.  
@@ -1128,7 +1129,7 @@ DEFAULTPROMPT=^#111<^?^h%h^?^#111/^R%H HP^? ^#111|^? ^m%m^?^#111/^C%M MP^? ^#111
 # GA	  - No extra carriage returns, Add Go-Ahead telnet code 
 # CRLF	  - Add extra carriage returns, No Go-Ahead telnet code
 # Default is empty.
-PROMPTBEHAVIOR=
+PROMPTBEHAVIOR=CRLF
 
 # EXPIRATIONS - A list of minutes denoting when various items, once placed
 # into a room directly or indirectly by your players, will expire and
@@ -1301,7 +1302,7 @@ ACCOUNTEXPIRATION=NO
 # TRIALDAYS sets how many days a player gets free with character
 # creation.  This setting only matters when ACCOUNTEXPIRATION=YES.
 # Default is 15
-TRIALDAYS=15
+TRIALDAYS=3
 
 # EXPCONTACTLINE is the line displayed to the players when their account
 # is expired.    This setting only matters when ACCOUNTEXPIRATION=YES.
@@ -1428,7 +1429,7 @@ ADDWEARLOC_ANUS=,0.2,30,0.5,0.7,1.0
 # cause events to be automatically broadcasted on the given channel.
 CHANNELS=\
 	NEWBIE LIGHTCYAN,\
-        MUSIC SAMEAREA READONLY LIGHTPURPLE -EFFECTS "+Property_Neurallink", \
+	MUSIC SAMEAREA READONLY LIGHTPURPLE -EFFECTS "+Property_Neurallink",\
 	RPFINDER BGGREEN WHITE ADDAREA,\
 	IMPLANT BGRED WHITE SAMEAREA ADDAREA -EFFECTS "+Property_Neurallink",\
 	CHAT BGBLUE LIGHTCYAN ACCOUNTOOC NOLANGUAGE NOMOOD,\
@@ -1439,10 +1440,10 @@ CHANNELS=\
 	INFO READONLY MARRIAGES NEWPLAYERS,\
 	WIZINFO READONLY LOGINS LOGOFFS DETAILEDLEVELS DETAILEDDEATHS PLAYERPURGES -CLASS +PRAETOR +ARCHON,\
 	BUILDER -CLASS +PRAETOR +ARCHON,\
-        EMERGENCY BGRED YELLOW -CLAN "+Novamed Corporation" "+Phantom City Justice Force" -EFFECTS "+Property_Neurallink",\
-        HIVEMIND PURPLE -EFFECTS "+Scionness" +OR -RACE +XENO,\
+	EMERGENCY BGRED YELLOW -CLAN "+Novamed Corporation" "+Phantom City Justice Force" -EFFECTS "+Property_Neurallink",\
+	HIVEMIND PURPLE -EFFECTS "+Scionness" +OR -RACE +XENO,\
 	CORPO BGGREEN WHITE -TATTOOS +CORPORATE -EFFECTS "+Property_Neurallink",\
-
+	
 
 # COMMANDJOURNALS is a list, separated by commas, as below.  
 # These are system journal commands.  The journal names must be 
@@ -1484,7 +1485,7 @@ COMMANDJOURNALS=\
 	BUILD CHANNEL=BUILDER ADDROOM=on ADMINECHO=on CONFIRM=on ASSIGN=ALL:,\
 	PKMAIL CHANNEL=WIZINFO ADDROOM=on ADMINECHO=on CONFIRM=on ASSIGN=ALL:,\
 	STAFFMAIL CHANNEL=WIZINFO ADDROOM=on ADMINECHO=on ASSIGN=ALL:,\
-
+	
 # FORUMJOURNALS is a list, separated by commas, as below.  
 # These are journals that act as open forums for users, esp on the
 # web site.  After the journal name comes a series of flags and 
@@ -1510,7 +1511,7 @@ FORUMJOURNALS=\
 # reading the table of contents of a journal.  This number can be 
 # overridden when reading the journal to list older entries.  The
 # default is 10.  0 would be no limit.
-JOURNALLIMIT=10
+JOURNALLIMIT=0
 
 # CHANNELBACKLOG is the maximum number of channels messages for each
 # channel that will be retained in the channel backlog database. 
@@ -2033,7 +2034,8 @@ ACCMSGS=OFF
 #
 # The default value is COMMAND_POSE, which disables the pose command, 
 #    along with QUITREASON and RETIREREASON, which are useless.
-DISABLE=DBERRORQUESTART, QUITREASON, SLOW_AGEING, DEATHCRY, AUTOMOODS, AUTOFORWARD, FATIGUE, ALLERGIES, NEWPLAYERS
+DISABLE=DBERRORQUESTART, QUITREASON, SLOW_AGEING, DEATHCRY, AUTOMOODS, AUTOFORWARD,\
+		FATIGUE, ALLERGIES, NEWPLAYERS
 
 # The ENABLE flag is for enabling features of the engine which are 
 # normally disabled, such as most races, character classes in beta,
@@ -2055,7 +2057,8 @@ DISABLE=DBERRORQUESTART, QUITREASON, SLOW_AGEING, DEATHCRY, AUTOMOODS, AUTOFORWA
 ENABLE=RACE_OGRE, RACE_LIZARDMAN, RACE_MERFOLK, RACE_PIXIE, RACE_ORC, RACE_GOBLIN,\
 	   RACE_CENTAUR, RACE_KOBOLD, RACE_RESURGENTIS, RACE_DRYAD, RACE_DEMON,RACE_DWARF,\
 	   RACE_NYMPH, RACE_KITSUNE, RACE_DROW, RACE_FAERIE, RACE_BEASTKIN,  RACE_NEKOMIMI,\
-	   RACE_ANGEL, RACE_TIEFLING, RACE_SLIMEPERSON, RACE_GNOLL, RACE_LAMIA, RACE_DRACONIAN, RACE_MYCONID
+	   RACE_ANGEL, RACE_TIEFLING, RACE_SLIMEPERSON, RACE_GNOLL, RACE_LAMIA,RACE_DRACONIAN,\
+	   RACE_MYCONID
 
 # The DEBUG flag should be used only by developers who want lots of
 # extra logging in order to fix bugs.  These values are also comma delimited.
@@ -2410,7 +2413,7 @@ FORMULA_TOTALCOMBATXP=250 + ((25*@x1) - (@x1*((25*@x1)^.5)))
 # @x3=sum of all (each dividers level squared), @x4=killers level
 # @x4=sum of all dividers levels, @x5=total number of killers
 # @x6=highest killer level, @x7=killed monster level
-FORMULA_INDCOMBATXP=@x1 < 500
+FORMULA_INDCOMBATXP=@x1 * (@x2 / @x3)
 
 # FORMULA_MAXCARRY describes the maximum weight any mob can carry
 # at a time.
