push stuff i dont know

--- a/resources/help/newhelp.ini
+++ b/resources/help/newhelp.ini
@@ -11,7 +11,8 @@ Intelligent Undead - Much like Liches but weaker, though the person do not need 
 \n\rSylph - Air specialized-ly ascended nymphs, coming with several elemental related abilities and more potential for beauty-wise growth than regular nymphs too.\
 \n\r\
 \n\rSynthetic - Robots with independent AI that runs the body, much like any person but potential to upgrade themselves to be better than the organics.\
-\n\r\n\rWhite Essence Resurgentis - White essence resurgentis are taled to be from the heritage of the god of death himself, besides the legends they are one in a million among the resurgentis and are often taken as royalty.. or extremely expensive prestigious slaves. They are said to be immune to effects of Mind flayers and resistant to mind effects overall, and have extra affinity to undead magic. They are also known to be very talented in things they do with passion most of the time. All of that comes with being at the target board all the time.
+\n\r\n\rWhite Essence Resurgentis - White essence resurgentis are taled to be from the heritage of the god of death himself, besides the legends they are one in a million among the resurgentis and are often taken as royalty.. or extremely expensive prestigious slaves. They are said to be immune to effects of Mind flayers and resistant to mind effects overall, and have extra affinity to undead magic. They are also known to be very talented in things they do with passion most of the time. All of that comes with being at the target board all the time.\
+\n\r\n\rSclerotia - Similiar to Myconid only in the way they are both fungus based, Sclerotia are fungus taken over dead bodies of humanoids that are reanimated in a twisted way such as that. You must die to become this.
 
 PLOT=Command : PLOT\n\r\
 Usage   : PLOT [PLOT MESSAGE]\n\r\
@@ -154,7 +155,9 @@ Generally created by evil gods or born in hell from other demons' or their victi
 SEX_ABILITIES=Sex abilities are special set of abilities created with the purpose of life-stealing over combat sex while often holding your opponent and yourself in a pinned position, Sex abilities are mostly dependant on breeding expertise which is tied to the dexterity stat, some sex abilities also have dirty fighting and grappling sort of expertises aswell.
 CLONING=Cloning is a premium service (EXP cost as you die, the restoration prayer cost when you get up and maybe early cloning cost to your friend if that happens.). Cloning allows semi-immortality though mind transferring to a newly cloned body of yours, You will not remember memories leading up to your death if it is caused by another player, PK acts. And most likely most of your last day(or few days) depending on what you want. Clone vats scan for their customers` health status once per hour and if none is detected they will shoot up a new clone and transfer the mind of the customer into the  new body. (it will revive your body in the same room, codedly.) Premium, new model cloning vats that corporate buildings have also shoots up on log-in of any sort.
 
-GUNSMITHING=Ability to create modern weapons, try `gunsmith`, `gunsmith list`
+GUNSMITHING=<ABILITY>\
+Ability to create modern weapons, try `gunsmith`, `gunsmith list`
+
 DISCORD=https://discord.gg/TXsNYrqYCY
 OMOTE=USAGE: OMOTE (Ooc emote)\
 \n\r\
@@ -168,7 +171,8 @@ ECHO=USAGE: ECHO (TEXT)\
 Allows an user to echo an emote of things such as happenings in the room or background npcs etc without having their name at the beginning of the emote.
 RP_SKILLS=RP Skills grant minor coded bonuses and are primarily for getting RP skills to use in well, RP. They do not do much. To prove you have such skill, simply do: ^cprove (full skill name)^N%0DExample: ^cprove like a shadow i^N
 ADVANCED_CLASSES=Tacticaljoy - Sexual experts that learn many related abilities and even some that are special to some classes, and learn the way to do sexual healing more efficently than most.\n\r\n\rInfiltrator - Above the lowly thieves in the streets, specially trained stealth and CQC (close quarters combat) masters though primarily focused to avoid direct confrontation. Usually found working for corporations or freelance for doing things cleanly and without a sound.\n\r\
-\n\rArchmage - A mage who has earned the rank of archmage by their knowledge of all mage schools beyond their primary. They can memorize spells of any school at the cost of some mana cap, which is released on cast.
+\n\rArchmage - A mage who has earned the rank of archmage by their knowledge of all mage schools beyond their primary. They can memorize spells of any school at the cost of some mana cap, which is released on cast.\
+\n\r\n\rEngineer - Modern day big brained tinkerers who are able to create modern weapons, bulk and specialized ammunition for specific calibers and generic calibered weapons they can create, also able to do construction and RESTRING items.
 
 CORPORATE_BRANDS=^bArchercorp^N - Formed by Leonard William Archer. Most likely the oldest corporation to exist, coming from the old world. A weapons and space vessel manufacturer and developing megacorp that build the Space Station Epsilon, still persists to this day. A strangely isolationist corporation.%0D\
 %0D\
@@ -183,7 +187,9 @@ CORPORATE_INCOME=Corporations are paid 150 megacredits income every 15th of the 
 
 SYLPH=<RACE>\
 Whimsical and unpredicted like a gust of wind, this race of winged nymphs belonging to the element of air tend to make their homes at the tallest trees or the highest peaks where the air is constantly moving and preferably where storms brew. Fae beings of air, they`re quick and light, but lack mass and strength. They are so rare even the legends about their existence are mostly unheard of. Some claim their beauty surpasses even that of nymphs, others say they`re barely humanoid and more of a chaotic air elemental playing illusions on the minds of unlucky mountaineers. Those who claim to have witnessed one, described them as a gorgeous feminine breeze. Caves, confined places and stale air are the dread of sylphs and long exposure to such will harm them.
-PLAYER_HOUSING=If there is a residental area, a suitable place in the wilderness or such spot you want to build a home in? Ask an immortal to make you a room you can expand into, the starting room will require ^c30QP^N and amount of ^clocal currency^N up to the immortal`s discretion, and it will either have a ^crent or maintenance costs monthly^N like any other player housing, however houses in the no man`s land, which require just upkeep will require much less currency per month.
+PLAYER_HOUSING=If there is a residental area, a suitable place in the wilderness or such spot you want to build a home in? Ask an immortal to make you a room you can expand into, the starting room will require ^c30QP^N OR a alot of ^craw materials^N required for a house and an amount of ^clocal currency^N up to the immortal`s discretion, and it will either have a ^crent or maintenance cost monthly^N like any other player housing, however houses in the no man`s land, which require just upkeep will require much less currency per month.\
+^cYou can also ask an immortal to purchase a house to be permanently a characters` for a grand amount of in game money.^N
+
 KIDNAP=Kidnapping rules:\
 ^N%0D\
 ^H1.^XWhile the kidnapped person is online, you are required to keep in touch with them, you can not leave them alone in a room for more than a couple hours.\
@@ -214,3 +220,5 @@ NOPK=NOPK marked areas prevent playerkilling and all fights in that room and pro
 DEATHMESSAGES=You may have encountered one gorey, snuffy and maybe worse or better message from a mob you fought and lost to, those are generally happening in dungeons where everyone was warned to be extremely dark and hellish to start. Mobs may have either race-based or name specific death messages that pop up when they kill anything else, expressing their overly perverted and sick nature, and darkening the dungeon atmosphere, making people less likely to wander into dangerous areas, as it should be. Not everyone is cut out to be an adventurer, it requires strong will, strong body and dedication to be one... Or perhaps being sick in the head may result in an adventurer aswell, if lacking will and dedication.\
 A party is always good to have, as those dark dungeons are no joke.\
 Note: If you died to an ability from a mob, a deathmessage will not trigger. Only death by regular attacks will trigger a death message.%0D%0D^C(if you think a mob should have message attached to it, do an IDEA or publish your writings over discord contribution channels, they require all possible entries, M on M, M on F, F on F, F on M however.)^N
+MYCONID=<RACE>A race of magically gifted mushrooms, A myconid is typically created when a fungus absorbs significant magical energy, allowing for a particular fruiting body to gain sentience. Myconids find themselves without much of a history or culture, but they share a vague togetherness through their shared connection to the invisible mycelial network beneath their feet. Although they can take many forms, most Myconids are at least humanoid in shape, with a mushroom cap topping their round heads.
+SCLEROTIA=<RACE>
