--- a/resources/help/misc_help.ini
+++ b/resources/help/misc_help.ini
@@ -419,11 +419,7 @@ forums, each with their own subject matter.  Forums are available from the \
 web site at  http://@INIValue?INI=DOMAIN@:@WEBSERVERPORT@/forums.cmvp
 
 TIME=\
-Time in CoffeeMud is divided into 6 "hours", each of which is about \
-10 real minutes long.  Hours in CoffeeMud are numbered from 0-5. \
-Dawn is at hour 0, dusk is at hour 4, and night at hour 5. \
-There are 20 mud "days" to each month, and 8 mud "months" to each year. \
-The months are divided into four seasons.
+The time in the mud is 4 to 1 ratio, so four hours in mud is one hour in real life.
 
 CLASS=Try HELP FIGHTER, THIEF, BARD, CLERIC, MAGE, APPRENTICE, or DRUID. For help \
 on multi-classing, try HELP MULTICLASS.
