--- a/coffeemud.ini
+++ b/coffeemud.ini
@@ -962,7 +962,7 @@ DEFAULTABILITYARGS=Disease_Vanpirism=NOSWIM=false
 
 # NEWACODES is a comma delimited list of ability types/codes to add
 # to the official list.  The format is NEW_ACODE, NEW_ACODE2,...
-NEWACODES=NEW_SEXUAL
+NEWACODES=SEXUAL
 
 # NEWDOMAINS is a comma delimited list of ability domain names to add
 # to the official list of domains.  The format is NEW_DOMAIN=Verb, where
