--- a/coffeemud.ini
+++ b/coffeemud.ini
@@ -1455,20 +1455,20 @@ ADDWEARLOC_SUBDERMAL=body,0.3,34,0.5,0.7,1.0
 # Some of the above flags cause events to be automatically broadcasted
 # on the given channel.
 CHANNELS=\
-	NEWBIE LIGHTCYAN,\
+	NEWBIE LIGHTCYAN, DISCORD=intermud-newbie\
 	MUSIC SAMEAREA READONLY LIGHTPURPLE -EFFECTS "+Property_Neurallink",\
-	RPFINDER BGGREEN WHITE ADDAREA,\
+	RPFINDER BGGREEN WHITE ADDAREA,DISCORD=intermud-rp-finder\
 	IMPLANT BGRED WHITE SAMEAREA ADDAREA -EFFECTS "+Property_Neurallink",\
-	CHAT BGBLUE LIGHTCYAN ACCOUNTOOC NOLANGUAGE NOMOOD,\
-	WANTEDNET BGPURPLE WHITE EXECUTIONS WARRANTS PLAYERREADONLY ARCHONREADONLY -EFFECTS "+Property_Neurallink",\
+	CHAT BGBLUE LIGHTCYAN ACCOUNTOOC NOLANGUAGE NOMOOD,DISCORD=intermud-chat\
+	WANTEDNET BGPURPLE WHITE EXECUTIONS WARRANTS PLAYERREADONLY ARCHONREADONLY -EFFECTS "+Property_Neurallink", DISCORD=intermud-alert\
 	QUESTCHAT BGBLUE LIGHTCYAN SAMEAREA PLAYERREADONLY,\
 	WIZ -CLASS +PRAETOR +ARCHON,\
 	CLANTALK CLANONLY LOGINS LOGOFFS CONQUESTS CLANINFO -EFFECTS "+Property_Neurallink",\
-	INFO READONLY MARRIAGES NEWPLAYERS,\
-    LOGINS READONLY LOGINS LOGOFFS,\
-	WIZINFO READONLY LOGINS LOGOFFS DETAILEDLEVELS DETAILEDDEATHS PLAYERPURGES -ANYCLASS +PRAETOR +ARCHON,\
+	INFO READONLY MARRIAGES NEWPLAYERS,DISCORD=intermud-chat\
+    LOGINS READONLY LOGINS LOGOFFS,DISCORD=intermud-chat\
+	WIZINFO READONLY LOGINS LOGOFFS DETAILEDLEVELS DETAILEDDEATHS PLAYERPURGES -ANYCLASS +PRAETOR +ARCHON,DISCORD=intermud-wizinfo\
 	BUILDER -CLASS +PRAETOR +ARCHON,\
-	EMERGENCY BGRED YELLOW -CLAN "+Novamed Corporation" "+Phantom City Justice Force" -EFFECTS "+Property_Neurallink",\
+	EMERGENCY BGRED YELLOW -CLAN "+Novamed Corporation" "+Phantom City Justice Force" -EFFECTS "+Property_Neurallink", DISCORD=intermud-alert\
 	HIVEMIND PURPLE -EFFECTS "+Scionness" +OR -RACE +XENO,\
 	CORPO BGGREEN WHITE -TATTOOS +CORPORATE -EFFECTS "+Property_Neurallink",\
 
@@ -2201,7 +2201,7 @@ WHITELISTIPSNEWPLAYERS=
 # DISCORD_JAR_PATH is for linking discord to one or more channels.
 # It is the VFS path to the JavaCord library  3.9.0 is supported.
 # Example: DISCORD_JAR_PATH=/lib/javacord-3.9.0-shaded.jar
-DISCORD_JAR_PATH=
+DISCORD_JAR_PATH=/lib/javacord-3.9.0-shaded.jar
 
 # DISCORD_BOT_KEY is for linking discord to one or more channels.
 # It is the secret Bot key you get when you add a Bot to a Discord
