--- a/coffeemud.ini
+++ b/coffeemud.ini
@@ -713,7 +713,7 @@ REMORTRETAIN=100% FACTIONS, 100% QUESTPOINT, 50% EXPERTISES, WARRANTS, RACE
 # Example: Orc+Human=Gnome,MOTHER Elf+Human=HalfElf|Elf
 # Default is blank.
 RACEMIXING=Elf+Human=HalfElf,Ogre+Giant|Human=HalfOgre,Elf+Drow=Drow,\
-		   Human+Resurgentis=Resurgentis,Elf+Resurgentis=Resurgentis,\
+		   Human+Resurgentis=Resurgentis,\
 		   Tiefling+Human=Tiefling,Demon+Tiefling=Demon
 
 # HUNGER allows one to tweak the game hunger system.  This
@@ -854,7 +854,7 @@ EFFECTCAP=0
 #      @x3=minimum mana cost, @x4=adjusted mob skill level, @x5=# levels above qual
 # Example: MANACOST=-3, Spell_Shield @x2*3, Skill_Recall 10
 # Default is: -0.5, Skill_Recall 25
-MANACOST-1 Skill_Recall 25
+MANACOST=-1 Skill_Recall 25
 
 # MANACOMPOUND is an optional system to increase the amount of
 # mana/move/whatever used whenever a skill is used again within
@@ -884,7 +884,7 @@ MANAMINCOST=-1, 10
 
 # The PRACMAXPCT is the maximum percentage of skill proficiency that
 # can be practiced using practice points.  Default is 75.
-PRACMAXPCT=75
+PRACMAXPCT=95
 
 # ABILITY COSTS are three fields which define the number of
 # trains, xp, money, and/or practices required to gain an ability by
@@ -1455,20 +1455,20 @@ ADDWEARLOC_SUBDERMAL=body,0.3,34,0.5,0.7,1.0
 # Some of the above flags cause events to be automatically broadcasted
 # on the given channel.
 CHANNELS=\
-	NEWBIE LIGHTCYAN, DISCORD=intermud-newbie\
+	NEWBIE LIGHTCYAN, DISCORD=intermud-newbie,\
 	MUSIC SAMEAREA READONLY LIGHTPURPLE -EFFECTS "+Property_Neurallink",\
-	RPFINDER BGGREEN WHITE ADDAREA,DISCORD=intermud-rp-finder\
+	RPFINDER BGGREEN WHITE ADDAREA,DISCORD=intermud-rp-finder,\
 	IMPLANT BGRED WHITE SAMEAREA ADDAREA -EFFECTS "+Property_Neurallink",\
-	CHAT BGBLUE LIGHTCYAN ACCOUNTOOC NOLANGUAGE NOMOOD,DISCORD=intermud-chat\
-	WANTEDNET BGPURPLE WHITE EXECUTIONS WARRANTS PLAYERREADONLY ARCHONREADONLY -EFFECTS "+Property_Neurallink", DISCORD=intermud-alert\
+	CHAT BGBLUE LIGHTCYAN ACCOUNTOOC NOLANGUAGE NOMOOD,DISCORD=intermud-chat,\
+	WANTEDNET BGPURPLE WHITE EXECUTIONS WARRANTS PLAYERREADONLY ARCHONREADONLY -EFFECTS "+Property_Neurallink", DISCORD=intermud-alert,\
 	QUESTCHAT BGBLUE LIGHTCYAN SAMEAREA PLAYERREADONLY,\
 	WIZ -CLASS +PRAETOR +ARCHON,\
 	CLANTALK CLANONLY LOGINS LOGOFFS CONQUESTS CLANINFO -EFFECTS "+Property_Neurallink",\
-	INFO READONLY MARRIAGES NEWPLAYERS,DISCORD=intermud-chat\
-    LOGINS READONLY LOGINS LOGOFFS,DISCORD=intermud-chat\
-	WIZINFO READONLY LOGINS LOGOFFS DETAILEDLEVELS DETAILEDDEATHS PLAYERPURGES -ANYCLASS +PRAETOR +ARCHON,DISCORD=intermud-wizinfo\
+	INFO READONLY MARRIAGES NEWPLAYERS,DISCORD=intermud-chat,\
+    LOGINS READONLY LOGINS LOGOFFS,DISCORD=intermud-chat,\
+	WIZINFO READONLY LOGINS LOGOFFS DETAILEDLEVELS DETAILEDDEATHS PLAYERPURGES -ANYCLASS +PRAETOR +ARCHON,DISCORD=intermud-wizinfo,\
 	BUILDER -CLASS +PRAETOR +ARCHON,\
-	EMERGENCY BGRED YELLOW -CLAN "+Novamed Corporation" "+Phantom City Justice Force" -EFFECTS "+Property_Neurallink", DISCORD=intermud-alert\
+	EMERGENCY BGRED YELLOW -CLAN "+Novamed Corporation" "+Phantom City Justice Force" -EFFECTS "+Property_Neurallink", DISCORD=intermud-alert,\
 	HIVEMIND PURPLE -EFFECTS "+Scionness" +OR -RACE +XENO,\
 	CORPO BGGREEN WHITE -TATTOOS +CORPORATE -EFFECTS "+Property_Neurallink",\
 
