--- a/resources/laws.ini
+++ b/resources/laws.ini
@@ -1,12 +1,12 @@
 #Denotes the name of the mob in your area who may serve as enforment officers
 # This field is a space-delimited list of key words to search mob names for.
 # Remember that these mobs must be MOBILE in order to do their duty.
-OFFICERS=Judge
+OFFICERS=Officer
 
 #Denotes the name of the mob who serves as a judge for this area.
 # This field is a space-delimited list of key words to search mob names for.
 #This mob may NOT be mobile!
-JUDGE=Magistrate
+JUDGE=Judge
 
 #A list, separated by semicolons, of rooms which may serve as jails.  The list
 # may include room numbers, or display descriptions.
@@ -71,7 +71,7 @@ RESISTMSG=Resisting arrest eh?  Well, have it your way.
 # not protected.  This mask is defined by the standard "Zapper"
 # mask.  Use AHELP HAVEZAPPER from the Archon command line for
 # more information on how to use this mask.
-PROTECTED=-RACECAT +Humanoid +Elf +Dwarf +Halfling +Gnome "+Giant-kin" +Resurgentis +Drow +Scion +Faerie +Nymph +Kitsune +Beastkin +Nekomimi +Dryad +Succubus +Incubus
+PROTECTED=-RACECAT +Humanoid
 
 #Whether or not mobs may commit crimes (except nudity and armed citizen)
 ARRESTMOBS=true
