--- a/resources/help/newhelp.ini
+++ b/resources/help/newhelp.ini
@@ -237,3 +237,4 @@ Removing the claimed room need immortal fixing, let an immortal know after you u
 LUST_RESISTANCE=Lust resistance, while sounds like it gets you less damage in battlefuck, it is just a name for mind save which takes part in not getting affected by mind effects, including battlefuck abilities to begin with. To reduce damage you would need mind damage absorbing things instead.
 ELDRITCH-HORROR=<RACE>Legend says an old god amused itself with mixing different creatures from the past and future in a cauldron of deep magic. The result was eventually discarded, disintegrated and blown away along with the old gods. But rather than dust, it became spores that dispersed through the universe, attaching themselves to living hosts and slowly but surely, taking over.
 ASCII=If messages have ascii art that appear as unknown characters, try turning your client`s server data encoding settings to UTF-8.
+TENTACLE-MONSTER=<RACE>
